# Backup-system

./: CMakeLists.txt  README.md  build_project.bat  folder_and_file_paths.txt
include/: CBackup.h  CBackupManager.h  CBackupRecorder.h  CConfig.h  CFactory.h  CFileFilter.h  CompressFactory.h  HuffmanCompress.h  ICompress.h  IEncrypt.h  IPack.h  PackFactory.h  myCompress.h  myPack.h  testUtils.h
src/: CBackup.cpp  CBackupManager.cpp  CBackupRecorder.cpp  CConfig.cpp  CMakeLists.txt  CompressFactory.cpp  EncryptFactory.cpp  HuffmanCompress.cpp  MyCompress.cpp  PackFactory.cpp  SimpleXOREncrypt.cpp  main.cpp  myPack.cpp
test/: CMakeLists.txt  test_backup.cpp  test_compress.cpp  test_encrypt.cpp  test_main.cpp  test_pack.cpp  test_recorder.cpp
